terminando a aula 11 e iniciando a pratica10
