# back-end/Aulas/aula10/swagger.yaml
@@ -27,6 +27,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Mensagem'
     get:
+      security:
+        - JWTAuth: []
       tags:
         - produtos
       responses:
@@ -115,6 +117,11 @@ paths:
               schema:
                 $ref: '#/components/schemas/Mensagem'
 components:
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     Produto:
       type: object
